frontend/packages/piv_bindings/lib/src/ffi/golang_piv_bindings.ffigen.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Dart FFI bindings for the Go PIV c-shared library
class GeneratedGolangPivBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  GeneratedGolangPivBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  GeneratedGolangPivBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  go_piv_bindings_status_t go_piv_bindings_device_open(
    ffi.Pointer<go_piv_bindings_handle_t> out_handle,
  ) {
    return _go_piv_bindings_device_open(
      out_handle,
    );
  }

  late final _go_piv_bindings_device_openPtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            ffi.Pointer<go_piv_bindings_handle_t>,
          )
        >
      >('go_piv_bindings_device_open');
  late final _go_piv_bindings_device_open = _go_piv_bindings_device_openPtr
      .asFunction<
        go_piv_bindings_status_t Function(ffi.Pointer<go_piv_bindings_handle_t>)
      >();

  go_piv_bindings_status_t go_piv_bindings_device_close(
    int handle,
  ) {
    return _go_piv_bindings_device_close(
      handle,
    );
  }

  late final _go_piv_bindings_device_closePtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(go_piv_bindings_handle_t)
        >
      >('go_piv_bindings_device_close');
  late final _go_piv_bindings_device_close = _go_piv_bindings_device_closePtr
      .asFunction<go_piv_bindings_status_t Function(int)>();

  go_piv_bindings_status_t go_piv_bindings_device_close_all() {
    return _go_piv_bindings_device_close_all();
  }

  late final _go_piv_bindings_device_close_allPtr =
      _lookup<ffi.NativeFunction<go_piv_bindings_status_t Function()>>(
        'go_piv_bindings_device_close_all',
      );
  late final _go_piv_bindings_device_close_all =
      _go_piv_bindings_device_close_allPtr
          .asFunction<go_piv_bindings_status_t Function()>();

  go_piv_bindings_status_t go_piv_bindings_device_authenticate(
    int handle,
    ffi.Pointer<ffi.Char> pin_utf8,
  ) {
    return _go_piv_bindings_device_authenticate(
      handle,
      pin_utf8,
    );
  }

  late final _go_piv_bindings_device_authenticatePtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('go_piv_bindings_device_authenticate');
  late final _go_piv_bindings_device_authenticate =
      _go_piv_bindings_device_authenticatePtr
          .asFunction<
            go_piv_bindings_status_t Function(int, ffi.Pointer<ffi.Char>)
          >();

  go_piv_bindings_status_t go_piv_bindings_piv_status(
    int handle,
    ffi.Pointer<ffi.Int32> out_has_9c,
    ffi.Pointer<ffi.Int32> out_has_9d,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_pk_9c_pem,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_pk_9d_pem,
  ) {
    return _go_piv_bindings_piv_status(
      handle,
      out_has_9c,
      out_has_9d,
      out_pk_9c_pem,
      out_pk_9d_pem,
    );
  }

  late final _go_piv_bindings_piv_statusPtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('go_piv_bindings_piv_status');
  late final _go_piv_bindings_piv_status = _go_piv_bindings_piv_statusPtr
      .asFunction<
        go_piv_bindings_status_t Function(
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  go_piv_bindings_status_t go_piv_bindings_verify_signature_es256(
    ffi.Pointer<ffi.Char> public_key_9c_pem,
    ffi.Pointer<ffi.Char> challenge_base64url,
    ffi.Pointer<ffi.Char> signature_der_base64url,
  ) {
    return _go_piv_bindings_verify_signature_es256(
      public_key_9c_pem,
      challenge_base64url,
      signature_der_base64url,
    );
  }

  late final _go_piv_bindings_verify_signature_es256Ptr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('go_piv_bindings_verify_signature_es256');
  late final _go_piv_bindings_verify_signature_es256 =
      _go_piv_bindings_verify_signature_es256Ptr
          .asFunction<
            go_piv_bindings_status_t Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  go_piv_bindings_status_t go_piv_bindings_sign_challenge(
    int handle,
    ffi.Pointer<ffi.Char> challenge_base64url,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_signature_der_base64url,
    ffi.Pointer<ffi.Char> pin_utf8_or_null,
  ) {
    return _go_piv_bindings_sign_challenge(
      handle,
      challenge_base64url,
      out_signature_der_base64url,
      pin_utf8_or_null,
    );
  }

  late final _go_piv_bindings_sign_challengePtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('go_piv_bindings_sign_challenge');
  late final _go_piv_bindings_sign_challenge =
      _go_piv_bindings_sign_challengePtr
          .asFunction<
            go_piv_bindings_status_t Function(
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  go_piv_bindings_status_t go_piv_bindings_wrap_aes_for_recipients(
    ffi.Pointer<ffi.Pointer<ffi.Char>> recipients_pk_9d_pem,
    int recipients_count,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> out_aes_envelope_json,
  ) {
    return _go_piv_bindings_wrap_aes_for_recipients(
      recipients_pk_9d_pem,
      recipients_count,
      out_aes_envelope_json,
    );
  }

  late final _go_piv_bindings_wrap_aes_for_recipientsPtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
          )
        >
      >('go_piv_bindings_wrap_aes_for_recipients');
  late final _go_piv_bindings_wrap_aes_for_recipients =
      _go_piv_bindings_wrap_aes_for_recipientsPtr
          .asFunction<
            go_piv_bindings_status_t Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
            )
          >();

  go_piv_bindings_status_t go_piv_bindings_encrypt_message(
    int handle,
    ffi.Pointer<ffi.Char> aes_envelope_json,
    ffi.Pointer<ffi.Char> plaintext_base64url,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_message_envelope_json,
    ffi.Pointer<ffi.Char> pin_utf8_or_null,
  ) {
    return _go_piv_bindings_encrypt_message(
      handle,
      aes_envelope_json,
      plaintext_base64url,
      out_message_envelope_json,
      pin_utf8_or_null,
    );
  }

  late final _go_piv_bindings_encrypt_messagePtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('go_piv_bindings_encrypt_message');
  late final _go_piv_bindings_encrypt_message =
      _go_piv_bindings_encrypt_messagePtr
          .asFunction<
            go_piv_bindings_status_t Function(
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  go_piv_bindings_status_t go_piv_bindings_decrypt_message(
    int handle,
    ffi.Pointer<ffi.Char> aes_envelope_json,
    ffi.Pointer<ffi.Char> envelope_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_plaintext_base64url,
    ffi.Pointer<ffi.Char> pin_utf8_or_null,
  ) {
    return _go_piv_bindings_decrypt_message(
      handle,
      aes_envelope_json,
      envelope_json,
      out_plaintext_base64url,
      pin_utf8_or_null,
    );
  }

  late final _go_piv_bindings_decrypt_messagePtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('go_piv_bindings_decrypt_message');
  late final _go_piv_bindings_decrypt_message =
      _go_piv_bindings_decrypt_messagePtr
          .asFunction<
            go_piv_bindings_status_t Function(
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  go_piv_bindings_status_t go_piv_bindings_piv_slot9c_policy(
    int handle,
    ffi.Pointer<ffi.Int32> out_pin_policy,
    ffi.Pointer<ffi.Int32> out_touch_policy,
  ) {
    return _go_piv_bindings_piv_slot9c_policy(
      handle,
      out_pin_policy,
      out_touch_policy,
    );
  }

  late final _go_piv_bindings_piv_slot9c_policyPtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('go_piv_bindings_piv_slot9c_policy');
  late final _go_piv_bindings_piv_slot9c_policy =
      _go_piv_bindings_piv_slot9c_policyPtr
          .asFunction<
            go_piv_bindings_status_t Function(
              int,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  go_piv_bindings_status_t go_piv_bindings_piv_slot9d_policy(
    int handle,
    ffi.Pointer<ffi.Int32> out_pin_policy,
    ffi.Pointer<ffi.Int32> out_touch_policy,
  ) {
    return _go_piv_bindings_piv_slot9d_policy(
      handle,
      out_pin_policy,
      out_touch_policy,
    );
  }

  late final _go_piv_bindings_piv_slot9d_policyPtr =
      _lookup<
        ffi.NativeFunction<
          go_piv_bindings_status_t Function(
            go_piv_bindings_handle_t,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('go_piv_bindings_piv_slot9d_policy');
  late final _go_piv_bindings_piv_slot9d_policy =
      _go_piv_bindings_piv_slot9d_policyPtr
          .asFunction<
            go_piv_bindings_status_t Function(
              int,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  void go_piv_bindings_free_string(
    ffi.Pointer<ffi.Char> string,
  ) {
    return _go_piv_bindings_free_string(
      string,
    );
  }

  late final _go_piv_bindings_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'go_piv_bindings_free_string',
      );
  late final _go_piv_bindings_free_string = _go_piv_bindings_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void go_piv_bindings_free_string_array(
    ffi.Pointer<ffi.Pointer<ffi.Char>> array,
    int length,
  ) {
    return _go_piv_bindings_free_string_array(
      array,
      length,
    );
  }

  late final _go_piv_bindings_free_string_arrayPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int32)
        >
      >('go_piv_bindings_free_string_array');
  late final _go_piv_bindings_free_string_array =
      _go_piv_bindings_free_string_arrayPtr
          .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();
}

typedef go_piv_bindings_handle_t = ffi.Int64;
typedef Dartgo_piv_bindings_handle_t = int;

final class go_piv_bindings_status_t extends ffi.Struct {
  @ffi.Int32()
  external int code;

  external ffi.Pointer<ffi.Char> message;
}
